--- a/TodoListApp/TodoListApp.Persistance/TodoListApp.Persistance.csproj
+++ b/TodoListApp/TodoListApp.Persistance/TodoListApp.Persistance.csproj
@@ -4,4 +4,17 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.10" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Configurations\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TodoListApp.Core\TodoListApp.Core.csproj" />
+  </ItemGroup>
+
 </Project>
