add initial migration, connect dbContext in startup

--- a/TodoListApp/TodoListApp.Presentation/appsettings.json
+++ b/TodoListApp/TodoListApp.Presentation/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "TodoTasksDb": "Server=(localdb)\\mssqllocaldb;Database=TodoTasksDb;Trusted_Connection=True;"
+  },
   "AllowedHosts": "*"
 }
