--- a/TodoListApp/TodoListApp.Application/TodoListApp.Application.csproj
+++ b/TodoListApp/TodoListApp.Application/TodoListApp.Application.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TodoListApp.Core\TodoListApp.Core.csproj" />
+  </ItemGroup>
+
 </Project>
