--- a/TodoListApp/TodoListApp.Presentation/TodoListApp.Presentation.csproj
+++ b/TodoListApp/TodoListApp.Presentation/TodoListApp.Presentation.csproj
@@ -7,7 +7,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.10">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.8" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TodoListApp.Persistance\TodoListApp.Persistance.csproj" />
   </ItemGroup>
 
 </Project>
