--- a/TodoListApp/TodoListApp.Presentation/appsettings.json
+++ b/TodoListApp/TodoListApp.Presentation/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "TodoTasksDb": "Server=(localdb)\\mssqllocaldb;Database=TodoTasksDb;Trusted_Connection=True;"
+    "TodoTasksDb": "Server=DESKTOP-3PJT5O9;Database=TodoTasksDb;Trusted_Connection=True;"
   },
   "AllowedHosts": "*"
 }
