--- a/TodoListApp/TodoListApp.Application/TodoListApp.Application.csproj
+++ b/TodoListApp/TodoListApp.Application/TodoListApp.Application.csproj
@@ -8,4 +8,13 @@
     <ProjectReference Include="..\TodoListApp.Core\TodoListApp.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Users\Queries\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="MediatR" Version="9.0.0" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
+  </ItemGroup>
+
 </Project>
