--- a/TodoListApp/TodoListApp.Application/TodoListApp.Application.csproj
+++ b/TodoListApp/TodoListApp.Application/TodoListApp.Application.csproj
@@ -15,6 +15,7 @@
   <ItemGroup>
     <PackageReference Include="MediatR" Version="9.0.0" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.Cookies" Version="2.2.0" />
   </ItemGroup>
 
 </Project>
