--- a/TodoListApp/TodoListApp.Infrastructure/TodoListApp.Infrastructure.csproj
+++ b/TodoListApp/TodoListApp.Infrastructure/TodoListApp.Infrastructure.csproj
@@ -4,4 +4,12 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FluentValidation.AspNetCore" Version="9.3.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TodoListApp.Application\TodoListApp.Application.csproj" />
+  </ItemGroup>
+
 </Project>
