--- a/TodoListApp/TodoListApp.Presentation/TodoListApp.Presentation.csproj
+++ b/TodoListApp/TodoListApp.Presentation/TodoListApp.Presentation.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\TodoListApp.Infrastructure\TodoListApp.Infrastructure.csproj" />
     <ProjectReference Include="..\TodoListApp.Persistance\TodoListApp.Persistance.csproj" />
   </ItemGroup>
 
