added validation errors messages in forms

--- a/TodoListApp/TodoListApp.Infrastructure/TodoListApp.Infrastructure.csproj
+++ b/TodoListApp/TodoListApp.Infrastructure/TodoListApp.Infrastructure.csproj
@@ -12,4 +12,8 @@
     <ProjectReference Include="..\TodoListApp.Application\TodoListApp.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="API\Middlewares\" />
+  </ItemGroup>
+
 </Project>
