--- a/TodoListApp/TodoListApp.IntegrationTests/TodoListApp.IntegrationTests.csproj
+++ b/TodoListApp/TodoListApp.IntegrationTests/TodoListApp.IntegrationTests.csproj
@@ -7,7 +7,7 @@
 	<ItemGroup>
 		<PackageReference Include="FluentAssertions" Version="5.10.3" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.10" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="3.1.10" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.10" />
 		<PackageReference Include="Moq" Version="4.16.0" />
 		<PackageReference Include="xunit" Version="2.4.1" />
 		<PackageReference Include="xunit.runner.visualstudio" Version="2.4.1">
@@ -18,6 +18,12 @@
 
 	<ItemGroup>
 	  <ProjectReference Include="..\TodoListApp.Persistance\TodoListApp.Persistance.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <None Update="DatabaseIntegration\DatabaseConfiguration\TestData.sql">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </None>
 	</ItemGroup>
 
 </Project>
