--- a/TodoListApp/TodoListApp.Application/TodoListApp.Application.csproj
+++ b/TodoListApp/TodoListApp.Application/TodoListApp.Application.csproj
@@ -17,4 +17,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Cookies" Version="2.2.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Users\DTO\" />
+  </ItemGroup>
+
 </Project>
